# quycaros_pkg

./: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/quycaros_pkg/share/quycaros_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
msg/: ControlMsg.msg
srv/: GetVariable.srv  GetVariable2.srv  SetEmotion.srv  SetVariable.srv  SetVariable2.srv
